# blockdetection_ros2

./: Readme.me  frames.gv
plys/: counter_height_38.ply  debugdetectblock2.ply  only1detected.ply
src/basic_mobile_robot/: CMakeLists.txt  package.xml
src/basic_mobile_robot/launch/: basic_mobile_bot_v1.launch.py  edward_initial.launch  realsense_launch.py
src/basic_mobile_robot/models/: edward_the_robot.urdf
src/basic_mobile_robot/rviz/: urdf_config.rviz
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/launch/: blockdetection_launch.py
src/cpp_pubsub/src/: open3d_ros.cpp  open3d_ros.h  open3d_utils.h  publisher_member_function.cpp  subscriber_member_function.cpp
